all component alignment fix

--- a/src/css/WhyChoose.css
+++ b/src/css/WhyChoose.css
@@ -10,7 +10,7 @@
     display: flex;
     gap:0px;
     margin: 20px;
-    margin-left: 60px;
+    
 }
 
 .mainSect div:nth-child(1){
